# skufeu-updater

./: README.md  package-lock.json  package.json
src/: App.svelte  storage.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/lib/: ClientUpdater.svelte  News.svelte
